# TemporalSentimentTrader

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt
.kiro/settings/: lsp.json
alembic/: env.py
alembic/versions/: 001_add_quality_scoring_and_indexes.py  002_optimize_quality_scoring_indexes.py  003_add_quality_fields.py  004_add_insider_trades.py  6357c3ed5857_drop_unique_filing_url.py  6aeb58d1fa26_add_reddit_post_enhanced_fields.py  b5484dfd1a21_initial_migration.py
backend/: celery_app.py
backend/api/: main.py
backend/cache/: __init__.py  redis_client.py
backend/config/: rate_limits.py  settings.py
backend/database/: config.py  quality_migration.py
backend/models/: insider_trade.py  prediction.py  reddit.py
backend/scrapers/: india_insider_scraper.py  india_rss_scraper.py  mock_reddit.py  reddit_json_scraper.py  reddit_scraper.py  stock_scraper.py
backend/services/: ml_service.py  quality_scorer.py  reddit_service.py  risk_manager.py  stock_service.py  telegram_notifier.py
backend/strategy/: insider_tracker.py  regime_filter.py  signal_engine.py
backend/tasks/: insider_tasks.py  maintenance_tasks.py  ml_tasks.py  scraping_tasks.py
backend/utils/: indicators.py  logger.py  sentiment.py  ticker_extractor.py
data/: X_train.npy  y_train.npy
docs/: ARCHITECTURE.md  COMPLETE_ANALYSIS.md  GOD_MODE_MASTER_PLAN.md  IMPLEMENTATION.md  INSIDER_ARBITRAGE_GUIDE.md  MLFLOW_SETUP.md  NEXT_STEPS.md  REALITY_CHECK.md  TRADING_STRATEGY.md  task_implementation.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: badges.tsx  card.tsx  price-chart.tsx  sentiment-chart.tsx  signal-card.tsx  stock-card.tsx
frontend/lib/: api.ts  utils.ts
more_docs/: Can my ai project predict stocks.txt  Reddit Stock Prediction.txt  code-export-12-23-2025-1_49_03-AM.txt  tft insider steps.txt  tft_trader part 1.md  trading concepts for project.txt
scripts/: train_models.py  verify_docker_setup.sh
tests/: test_celery.py  test_scraper.py  test_stock_scraper.py
tests/integration/: test_quality_analytics.py  test_quality_database_schema.py  test_quality_filtered_scraping.py  test_quality_filtered_scraping_v2.py
tests/unit/: test_database_schema_updates.py  test_quality_scorer_integration.py  test_ticker_extractor_enhanced.py
(+22 files in other folders)
