[project]
name = "tft-trader"
version = "0.1.0"
description = "TFT Stock Trading Platform with ML Predictions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "praw>=7.7.1",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "lightgbm>=4.1.0",
    "xgboost>=2.0.2",
    "pytorch-forecasting>=1.0.0",
    "torch>=2.1.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "vadersentiment>=3.3.2",
    "APScheduler>=3.10.4",
    "textblob>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "ruff>=0.1.6",
]
