[project]
name = "temporal-sentiment-trader"
version = "0.1.0"
description = "Temporal Sentiment Trading Platform with TFT Ensemble ML Models"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "praw>=7.7.1",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.1",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.3",
    "pytorch-forecasting>=1.0.0",
    "torch>=2.2.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "redis>=5.0.1",
    "celery>=5.3.6",
    "vadersentiment>=3.3.2",
    "APScheduler>=3.10.4",
    "textblob>=0.17.1",
    "yfinance>=0.2.36",
    "pandas-ta>=0.3.14b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]
